Fix Chrome scrollbars issue
Using display to show/hide IFRAMEs would cause Chrome to make the scrollbar of the iframe disappear sometimes. The workaround is to use visibility, which we've done here

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -67,15 +67,16 @@ body {
 
 .panel iframe.app-frame {
     box-sizing: border-box;
-    display: none;
+    display: block;
     height: 100%;
     left: 0;
     position: absolute;
     top: 0;
+    visibility: hidden;
     width: 100%;
 }
 .panel iframe.app-frame.active {
-    display: block;
+    visibility: visible;
 }
 
 ul.toolbar {
